Bug 1386864 - Part 1. Compare image-data of two style-image objects only if both of them are resolved. r=heycam

MozReview-Commit-ID: 3gjoN9wNPlH

--HG--
extra : rebase_source : c1970147ede5cb3f3f94f3dd69100d92da573edf